# encord-client-python

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .testmondata  README.md  a.py  coco_example.json  coco_export.json  coco_exporter.py  demo.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py  test_skeletons.py
.github/: pull_request_template.md
.github/workflows/: aikido.yml  backend-sdk-integration-tests-response.yml  publish_sdk.yml  sdk-integration-tests.yml  sdk-pr.yml  sdk_code_to_docs.yml  sync-to-public.yml  test-sdk.yml  testing-pipeline.yml
cord/: __init__.py  client.py  configs.py  exceptions.py  user_client.py
cord/constants/: enums.py  model.py  model_weights.py  string_constants.py
cord/http/: error_utils.py  querier.py  query_methods.py  request.py  utils.py
cord/orm/: api_key.py  base_orm.py  cloud_integration.py  dataset.py  label_blurb.py  label_log.py  label_row.py  labeling_algorithm.py  model.py  project.py  project_api_key.py  project_with_user_role.py
cord/project_ontology/: classification_attribute.py  classification_option.py  classification_type.py  object_type.py  ontology.py  ontology_classification.py  ontology_object.py
cord/utilities/: client_utilities.py  label_utilities.py  project_user.py  str_constants.py  user_client_utilities.py
cord/utils/: client_utils.py  label_utils.py  str_constants.py
dev-240-tests/: test_project.py
docs/: .firebaserc  .gitignore  .isort.cfg  README.md  add_link  api.rst  black_code_examples.sh  build_docs  conf.py  cord.utilities.md  cvat-importer.rst  encord.utilities.md  firebase.json  gru.html  index.html  index.rst  objects.inv
docs/_extensions/: xref.py
docs/_modules/: cord.constants.rst  cord.http.rst  cord.orm.rst  cord.project_ontology.rst  cord.rst  cord.utilities.rst  modules.rst
docs/_sources/: cvat-importer.rst.txt
docs/_templates/: encord-navbar-logo.html  encord-sidebar-nav-bs.html
docs/doctrees/: cvat-importer.doctree  gru.doctree
docs/html/: api.html  genindex.html  searchindex.js
docs/source/: api.rst  authentication.rst  conf.py  faq.rst  general_concepts.rst  index.rst  installation.rst  links.json  quickstart.rst  substitutes.rst  tutorials.rst  user_client.rst
docs_tmp/: api.rst
encord/: __init__.py  _version.py  client.py  client_metadata_schema.py  collection.py  configs.py  dataset.py  exceptions.py  filter_preset.py  filterpreset.py  group.py  metadata_schema.py  ml_models_client.py  nuscenes.json  ontology.py  plan.md  preset.py  project.py  service_integration.py  storage.py  user_client.py
encord/analytics/: __init__.py  task_actions.py
encord/api/: ml_endpoints.py
encord/api_v2/: endpoints.py  models.py
encord/common/: beta.py  constants.py  deprecated.py  enum.py  integer_range_set.py  range_manager.py  time_parser.py  utils.py
encord/constants/: enums.py  model.py  model_weights.py  polling.py  string_constants.py
encord/encord_objects/: ontology.py
encord/fix_ontology/: count_total_broken_objects.py  handle_missing_ontology_piece.py
encord/http/: .querier.py.swp  __init__.py  batch.py  bundle.py  common.py  constants.py  error_utils.py  helpers.py  limits.py  querier.py  query_methods.py  request.py  utils.py
encord/issues/: __init__.py  issue_anchors.py  issue_client.py
encord/objects/: .ontology_structure.py.swp  __init__.py  analytics.py  answers.py  attributes.py  bitmask.py  bundled_operations.py  classification.py  classification_instance.py  common.py  constants.py  coordinates.py  dynamic_answer_manager.py  frames.py  html_node.py  internal_helpers.py  label_row_v2.py  label_structure.py  label_utils.py  metadata.py  ml_models.py  ontology.py  ontology_element.py  ontology_labels_impl.py  ontology_object.py  ontology_object_instance.py  ontology_structure.py  options.py  project.py  skeleton_template.py  space.py  types.py  utils.py
encord/oe_label_cleaning/: UGhent-orphaned-label-cleaner.py  investigate-jsons.py  iteratable-duplicated-label-cleaner.py
encord/orm/: active.py  analytics.py  api_key.py  base_orm.py  base_types.py  client_metadata_schema.py  cloud_integration.py  collection.py  common.py  constants.py  dataset.py  dataset_with_user_role.py  deidentification.py  editor_log.py  filter_preset.py  formatter.py  group.py  group_layout.py  label_log.py  label_row.py  label_space.py  labeling_algorithm.py  metadata_schema.py  model.py  ontology.py  preset.py  project.py  project_api_key.py  project_with_user_role.py  scene.py  skeleton_template.py  storage.py  user.py  workflow.py
encord/project_ontology/: classification_attribute.py  classification_option.py  classification_type.py  object_type.py  ontology.py  ontology_classification.py  ontology_object.py
encord/scene/: __init__.py  builder.py  cache.py  geometry.py  importers.py  internal.py  pcd_loader.py  read.py  scale.py  scene.py  transformations.py
encord/transformers/: __init__.py
encord/utilities/: benchmark_QA.py  benchmark_utilities.py  client_utilities.py  coco_encoder.py  common.py  hash_utilities.py  image_utilities.py  label_utilities.py  ml_endpoints.py  ontology_user.py  project_user.py  project_utilities.py  range_utilities.py  type_utilities.py
encord/workflow/: __init__.py  common.py  workflow.py
scripts/: code_examples_python_to_mdx.py
sdk_tests/: sdk_integration.json  test_dataset.py  test_project.py
sdk_tests/test_data/: dataset_tests_constants.py  project_tests_constants.py
src/encord/: collection.py  filter_preset.py
tests/: conftest.py  fixtures.py  test_analytics.py  test_batched_label_save.py  test_benchmark_utilities.py  test_bundled_label_operations.py  test_client.py  test_coco_export.py  test_editor_logs.py  test_label_logs.py  test_metadata_schema.py  test_project.py  test_service_integration.py  test_user_client.py  test_user_client_auth.py  test_version.py  test_workflow_actions.py  unittest_client.py
tests/common/: test_datetime_parser.py  (+1 more)
tools/: README.md  docstring_linter.py  docstring_linter_config.json
(+471 files in other folders)
