[tool.poetry]
name = "encord"
version = "0.1.167"
description = "Encord Python SDK Client"
authors = ["Cord Technologies Limited <hello@encord.com>"]
license = "Apache Software License"
keywords = ["encord"]
packages = [
    { include = "encord" },
]
readme = "README.md"
repository="https://github.com/encord-team/encord-client-python"
documentation="https://python.docs.encord.com/"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
include = ["encord/py.typed"]


[tool.poetry.dependencies]
python = ">=3.8,<3.9.0 || >3.9.0,<3.9.1 || >3.9.1"
python-dateutil = "^2.8.2"
requests = "^2.25.0"
cryptography = ">=43.0.0"
tqdm = "^4.32.1"
pydantic = ">=1.10.14"
orjson = ">=2"
pycocotools = {version = "^2.0.7", optional = true}
shapely = {version = "^2.0.4", optional = true}
opencv-python = {version = "^4.11.0.86", optional = true}
numpy = [
    {version = "^1.24", python = "<3.12", optional = true},
    {version = "^1.26", python = ">=3.12", optional = true}
]

[tool.poetry.extras]
coco = ["pycocotools", "shapely", "opencv-python", "numpy"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pre-commit = "^3.5.0"
deepdiff = "^6.2.1"
types-requests = "^2.25.0"
mypy = "^1.11.1"
types-python-dateutil = "^2.8.19"
types-tqdm = "^4.32.1"
pyright = "^1.1.374"
numpy = [
    {version = "^1.24", python = "<3.12"},
    {version = "^1.26", python = ">=3.12"}
]
opencv-python = {version = "^4.11.0.86"}
shapely = {version = "^2.0.4"}
pycocotools = {version = "^2.0.7"}
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["W", "Q", "I", "D417"]

[tool.ruff.lint.pydocstyle]
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"encord/*" = ["F401", "E402"]
